# JNIDemo

./: settings.gradle
androidfmmpeg/: CMakeLists.txt  build.gradle
androidfmmpeg/src/main/: AndroidManifest.xml
androidfmmpeg/src/main/cpp/: JavaListener.cpp  JavaListener.h  muzi-lib.cpp
androidfmmpeg/src/main/java/com/example/androidfmmpeg/: MainActivity.java  NativeDemo.java
androidfmmpeg/src/main/res/layout/: activity_main.xml
androidfmmpeg/src/main/res/values/: strings.xml
androidfmmpeg/src/test/java/com/example/androidfmmpeg/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: muzi.cpp  native-lib.cpp
app/src/main/java/com/example/jnidemo/: MainActivity.java  MainOnListener.java  Student.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
